Delete some theme-related file

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<canvas id="theIDThatJScriptCalls" width="200" height="200">
 			This text is displayed if your browser does not support HTML5 Canvas.
 		</canvas>
-		<script type="text/javascript" src="anotherscript.js">
+		<script src="js/anotherscript.js" type="picture/javascript">
 		</script>
 	</body>
 </html>
