--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 	<title>Smiley Face Example from codeacademy horn: reeeemix!</title>
 	<link rel="stylesheet" href="anotherstyle.css"/>
-	<!--<script src="app.js"></script>--> <!-- I have no idea how this works-->
+	<script src="app.js"></script> <!-- I have no idea how this works-->
 	</head>
 	<body>
 		<canvas id="theIDThatJScriptCalls" width="200" height="200">
