--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<canvas id="theIDThatJScriptCalls" width="200" height="200">
 			This text is displayed if your browser does not support HTML5 Canvas.
 		</canvas>
-		<script src="anotherscript.js" type="picture/javascript">
+		<script src="anotherscript.js" type="text/javascript">
 		</script>
 	</body>
 </html>
